--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "prepublish": "npm run build",
         "build": "webpack --config webpack.prod.js"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/karprabha/mobile-menu-npm"
+    },
     "author": "Prabhakar Yadav",
     "license": "ISC",
     "devDependencies": {
